# elektronika

./: LEGACY_ANALYSIS.md  README.md
.github/workflows/: rust_ci.yml
elektronika-rs/: Cargo.toml  README.md
elektronika-rs/src/: main.rs
