[package]
name = "elektronika-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29.10"
wgpu = "0.19.1"
egui = "0.26.2"
egui-wgpu = "0.26.2"
egui-winit = "0.26.2"
log = "0.4.20"
env_logger = "0.11.1"
pollster = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.24" # For loading textures/bitmaps
